--- a/index.html
+++ b/index.html
@@ -4,17 +4,87 @@
 		<meta charset="utf-8" />
 		<title>CG</title>
 
-		<script type="text/javascript" src="libs/require.js"></script>
+		<link rel="stylesheet" type="text/css" href="libs/bootstrap.min.css">
 
 		<style type="text/css">
-			body, canvas { background-color: #000; }
-			canvas { border: 1px solid #0000FF; }
-			input { color: #FFF; margin-bottom: 10px; width: 100%; }
+			body { margin: 10px; } 
+			canvas { background-color: #000; border: 1px solid #0000FF; }
+			input { margin-bottom: 10px; width: 100%; }
 		</style>
 	</head>
-	<body>
-		<input type="file" id="fileinput" />
-		<canvas id="canvas" width="500" height="500"></canvas>
+	<body class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<input type="file" id="fileinput" />
+				<canvas id="canvas" width="500" height="500"></canvas>
+			</div>
+
+			<div class="col-md-6">
+				<div class="form-group">
+					<label for="exampleInputEmail1">Câmera C</label>
+					<div class="row">
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraCX" placeholder="X" value="0">
+						</div>
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraCY" placeholder="Y" value="-500">
+						</div>
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraCZ" placeholder="Z" value="500">
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="exampleInputEmail1">Câmera N</label>
+					<div class="row">
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraNX" placeholder="X" value="10">
+						</div>
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraNY" placeholder="Y" value="10">
+						</div>
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraNZ" placeholder="Z" value="200">
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="exampleInputEmail1">Câmera V</label>
+					<div class="row">
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraVX" placeholder="X" value="0">
+						</div>
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraVY" placeholder="Y" value="0">
+						</div>
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraVZ" placeholder="Z" value="10">
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="exampleInputEmail1">Distâncias</label>
+					<div class="row">
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraD" placeholder="D" value="80">
+						</div>
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraHX" placeholder="Hx" value="1">
+						</div>
+						<div class="col-md-4">
+							<input type="number" class="form-control" id="cameraHY" placeholder="Hy" value="1">
+						</div>
+					</div>
+				</div>
+
+				<div>
+					<button class="btn btn-success" onclick="update()">Atualizar</button>
+				</div>
+			</div>
+		</div>
 		
 		<script type="text/javascript" src="js/point.js"></script>
 		<script type="text/javascript" src="js/math.js"></script>
