--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 					<label for="exampleInputEmail1">Câmera C</label>
 					<div class="row">
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraCX" placeholder="X" value="0">
+							<input type="number" class="form-control" id="cameraCX" placeholder="X">
 						</div>
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraCY" placeholder="Y" value="-500">
+							<input type="number" class="form-control" id="cameraCY" placeholder="Y">
 						</div>
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraCZ" placeholder="Z" value="500">
+							<input type="number" class="form-control" id="cameraCZ" placeholder="Z">
 						</div>
 					</div>
 				</div>
@@ -39,13 +39,13 @@
 					<label for="exampleInputEmail1">Câmera N</label>
 					<div class="row">
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraNX" placeholder="X" value="10">
+							<input type="number" class="form-control" id="cameraNX" placeholder="X">
 						</div>
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraNY" placeholder="Y" value="10">
+							<input type="number" class="form-control" id="cameraNY" placeholder="Y">
 						</div>
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraNZ" placeholder="Z" value="200">
+							<input type="number" class="form-control" id="cameraNZ" placeholder="Z">
 						</div>
 					</div>
 				</div>
@@ -54,13 +54,13 @@
 					<label for="exampleInputEmail1">Câmera V</label>
 					<div class="row">
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraVX" placeholder="X" value="0">
+							<input type="number" class="form-control" id="cameraVX" placeholder="X">
 						</div>
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraVY" placeholder="Y" value="0">
+							<input type="number" class="form-control" id="cameraVY" placeholder="Y">
 						</div>
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraVZ" placeholder="Z" value="10">
+							<input type="number" class="form-control" id="cameraVZ" placeholder="Z">
 						</div>
 					</div>
 				</div>
@@ -69,13 +69,13 @@
 					<label for="exampleInputEmail1">Distâncias</label>
 					<div class="row">
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraD" placeholder="D" value="80">
+							<input type="number" class="form-control" id="cameraD" placeholder="D">
 						</div>
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraHX" placeholder="Hx" value="1">
+							<input type="number" class="form-control" id="cameraHX" placeholder="Hx">
 						</div>
 						<div class="col-md-4">
-							<input type="number" class="form-control" id="cameraHY" placeholder="Hy" value="1">
+							<input type="number" class="form-control" id="cameraHY" placeholder="Hy">
 						</div>
 					</div>
 				</div>
