--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<script type="text/javascript" src="js/point.js"></script>
 		<script type="text/javascript" src="js/math.js"></script>
 		<script type="text/javascript" src="js/draw.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
+		<!-- <script type="text/javascript" src="js/main.js"></script> -->
 		<script type="text/javascript">
 			function openObject (event) {
 				var file = event.target.files[0]; 
