--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
 					</div>
 				</div>
 
+				<div class="form-group">
+					<label for="exampleInputEmail1">Colorir</label>
+					<div class="row">
+						<div class="col-md-1">
+							<input type="checkbox" class="form-control" id="color">
+						</div>
+					</div>
+				</div>
+
 				<div>
 					<button class="btn btn-success" onclick="update()">Atualizar</button>
 				</div>
@@ -97,8 +106,7 @@
 				if (file) {
 					var r = new FileReader();
 					r.onload = function(e) { 
-						var contents = e.target.result;
-						draw(contents);
+						draw(e.target.result);
 					}
 					r.readAsText(file);
 				} else { 
