--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 			<div class="col-md-6">
 				<div class="form-group">
-					<label for="exampleInputEmail1">Câmera C</label>
+					<label>Câmera C</label>
 					<div class="row">
 						<div class="col-md-4">
 							<input type="number" class="form-control" id="cameraCX" placeholder="X">
@@ -36,7 +36,7 @@
 				</div>
 
 				<div class="form-group">
-					<label for="exampleInputEmail1">Câmera N</label>
+					<label>Câmera N</label>
 					<div class="row">
 						<div class="col-md-4">
 							<input type="number" class="form-control" id="cameraNX" placeholder="X">
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="form-group">
-					<label for="exampleInputEmail1">Câmera V</label>
+					<label>Câmera V</label>
 					<div class="row">
 						<div class="col-md-4">
 							<input type="number" class="form-control" id="cameraVX" placeholder="X">
@@ -66,7 +66,7 @@
 				</div>
 
 				<div class="form-group">
-					<label for="exampleInputEmail1">Distâncias</label>
+					<label>Distâncias</label>
 					<div class="row">
 						<div class="col-md-4">
 							<input type="number" class="form-control" id="cameraD" placeholder="D">
@@ -81,10 +81,14 @@
 				</div>
 
 				<div class="form-group">
-					<label for="exampleInputEmail1">Colorir</label>
 					<div class="row">
-						<div class="col-md-1">
+						<div class="col-md-6">
+							<label>Colorir</label>
 							<input type="checkbox" class="form-control" id="color">
+						</div>
+						<div class="col-md-6">
+							<label>Desenhar vértices</label>
+							<input type="checkbox" class="form-control" id="vertices">
 						</div>
 					</div>
 				</div>
@@ -98,7 +102,7 @@
 		<script type="text/javascript" src="js/point.js"></script>
 		<script type="text/javascript" src="js/math.js"></script>
 		<script type="text/javascript" src="js/draw.js"></script>
-		<!-- <script type="text/javascript" src="js/main.js"></script> -->
+		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript">
 			function openObject (event) {
 				var file = event.target.files[0]; 
